<resources>
    <string name="app_name">FinalProject</string>
    <string name="slogan">doing it the right way</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="name_error">Enter a valid name</string>
    <string name="email_error">Enter a valid email</string>
    <string name="mobile_error">Enter a valid mobile</string>
    <string name="pass_invalid">Enter a valid password</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="sign_me_up">Sign up</string>
    <string name="phone">Phone</string>
    <string name="score_result">Score Result</string>
    <string name="my_activity">My Exam List</string>
    <string name="question">question</string>
    <string name="answer_1">answer 1</string>
    <string name="answer_2">answer 2</string>
    <string name="answer_3">answer 3</string>
    <string name="title">Result Title</string>
    <string name="type_your_question_here">Type your question here</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="view_history">View History</string>
    <string name="logout">Logout</string>
    <string name="_00_00">00:00</string>
    <string name="view_answer">View Answers</string>
    <string name="time_count">00:00</string>
    <string name="count_title">Count Title</string>
    <string name="invalid_number">Invalid number!</string>
    <string name="newpassword">New Password</string>
    <string name="reset_password">Reset Password</string>
</resources>