<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"

    tools:context="com.example.finalproject.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/qg_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="Reset Password"
        android:textColor="#000"
        android:textSize="35sp" />

    <EditText
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/person_icon"
        android:fontFamily="@font/roboto_thin"
        android:padding="12dp"
        android:id="@+id/usernameVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/user_background"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/emailVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/user_background"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/user_background"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/login_form_details" />


    <Button
        android:fontFamily="@font/roboto_thin"
        android:id="@+id/resetPasswordButton"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/reset_password"
        android:textColor="@color/login_form_details"/>





</LinearLayout>